string to variables

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,6 @@
         android:id="@+id/viewLogsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View Logs" />
+        android:text="@string/view_logs" />
 
 </LinearLayout>
