--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -8,7 +8,7 @@
         android:id="@+id/clearLogsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Clear Logs"
+        android:text="@string/clear_logs"
         android:layout_gravity="center_horizontal"
         android:layout_margin="16dp"/>
 
